--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,6 +25,7 @@ jobs:
               -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake
             cmake_config: --config RelWithDebInfo
             ctest_config: --build-config RelWithDebInfo
+            vcpkg_cache: C:\Users\runneradmin\AppData\Local\vcpkg\archives
 
     name: ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
@@ -43,7 +44,7 @@ jobs:
       uses: actions/cache@v2
       if: runner.os == 'Windows'
       with:
-        path: C:\Users\runneradmin\AppData\Local\vcpkg\archives
+        path: ${{ matrix.vcpkg_cache }}
         key: vcpkg-${{ github.head_ref }}-${{ github.run_number }}
         restore-keys: |
           vcpkg-${{ github.head_ref }}
